# vvas-apps

./: NOTICE  README.md
Embedded/: README.md
Embedded/compositor_example/: README.md
Embedded/compositor_example/hw/: Readme.md  dpu_conf.vh
Embedded/compositor_example/hw/prj_conf/: preplace.tcl  prj_config
Embedded/compositor_example/hw/scripts/: bip_proc.tcl
Embedded/compositor_example/sw/: build_compositor.sh  clean_compositor.sh  compositor.sh
Embedded/compositor_example/sw/vvas-gst-plugins/: meson.build  meson.cross.template  meson_options.txt
Embedded/compositor_example/sw/vvas-gst-plugins/sys/: meson.build
Embedded/compositor_example/sw/vvas-gst-plugins/sys/compositor/: README.md  gstvvas_xcompositor.c  meson.build
Embedded/opticalflow_analytics/: README.md
Embedded/opticalflow_analytics/hw/: Makefile  Readme.md
Embedded/opticalflow_analytics/hw/opticalflow_config/: xf_config_params.h
Embedded/opticalflow_analytics/hw/prj_conf/: preplace.tcl  prj_config  strip_interconnects.tcl
Embedded/opticalflow_analytics/hw/scripts/: bip_proc.tcl  create_release_pkg.sh
Embedded/opticalflow_analytics/sw/: build_optflow_analytics.sh  clean_optflow_analytics.sh  ofanalytics.sh
Embedded/opticalflow_analytics/sw/vvas-accel-sw-libs/: meson.build  meson.cross.template
Embedded/opticalflow_analytics/sw/vvas-accel-sw-libs/vvas_xpreprocessor/: meson.build
Embedded/opticalflow_analytics/sw/vvas-accel-sw-libs/vvas_xpreprocessor/src/: vvas_xpreprocessor.c
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/: meson.build  meson.cross.template
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/gst-libs/: meson.build
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/gst-libs/gst/: meson.build
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/gst-libs/gst/vvas/: README.md  gstvvasofmeta.c  gstvvasoverlaymeta.c  gstvvasoverlaymeta.h  meson.build
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/sys/: meson.build
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/sys/infer/: gstvvas_xinfer.c  meson.build
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/sys/ofanalytics/: README.md  gstvvas_xofanalytics.c  gstvvas_xofanalytics.h  meson.build
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/sys/optflow/: README.md  gstvvas_xoptflow.c  meson.build  optflow_hw.h
Embedded/opticalflow_analytics/sw/vvas-gst-plugins/sys/overlay/: README.md  gstvvas_xoverlay.cpp  meson.build  overlay_hw.h
Embedded/vvas_appsrcsink/: README.md  meson.build  meson.cross  meson_options.txt
Embedded/vvas_appsrcsink/json/: vvas_appsrcsink_config1.json  vvas_appsrcsink_config2.json
Embedded/vvas_appsrcsink/src/: vvas_appsrcsink.c  vvas_appsrcsink.h  vvas_appsrcsink_glue.c  vvas_appsrcsink_gst.c  vvas_appsrcsink_gst_priv.h
